desktop header.js fix more+ button color contrast

--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -134,7 +134,7 @@
                 font-size: 1.25rem;
                 font-family: inherit;
                 font-weight: 500;
-                color: $light-orange;
+                color: #E03400;
                 cursor: pointer;
             }
     
