--- a/src/style/general.css
+++ b/src/style/general.css
@@ -166,7 +166,7 @@ img {
   font-size: 1.25rem;
   font-family: inherit;
   font-weight: 500;
-  color: #ff764d;
+  color: #E03400;
   cursor: pointer;
 }
 .desktop--header .header--nav .header--nav--ul a {
